--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
 </head>
 <body>
-    <p id="demo">Hello</p>
+    <h1 id="demo">Hello</h1>
   <script>
       document.getElementById("demo").innerHTML = window.clipboardData.getData('Text');
   </script>
