--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 <body>
     <h1 id="demo">Hello</h1>
   <script>
-      navigator.clipboard.readText()
-        .then(text => {
-            document.getElementById("demo").innerHTML = text;
-          console.log('Pasted content: ', text);
-        })
-        .catch(err => {
-            document.getElementById("demo").innerHTML = err;
-          console.error('Failed to read clipboard contents: ', err);
-        });
+<!--      navigator.clipboard.readText()-->
+<!--        .then(text => {-->
+<!--            document.getElementById("demo").innerHTML = text;-->
+<!--          console.log('Pasted content: ', text);-->
+<!--        })-->
+<!--        .catch(err => {-->
+<!--            document.getElementById("demo").innerHTML = err;-->
+<!--          console.error('Failed to read clipboard contents: ', err);-->
+<!--        });-->
+  
 <!--      document.getElementById("demo").innerHTML = window.clipboardData.getData('Text');-->
+
+    navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);
   </script>
 </body>
 </html>
