--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
   
 <!--      document.getElementById("demo").innerHTML = window.clipboardData.getData('Text');-->
 
-    navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);
+<!--    navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);-->
+
+navigator.permissions.query({ name: "clipboard-read" }).then((result) => {
+    // If permission to read the clipboard is granted or if the user will
+    // be prompted to allow it, we proceed.
+  
+    if (result.state == "granted" || result.state == "prompt") {
+        navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);
+    }
+  });
   </script>
 </body>
 </html>
