--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
 <!--      document.getElementById("demo").innerHTML = window.clipboardData.getData('Text');-->
 
 <!--    navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);-->
-
-navigator.permissions.query({ name: "clipboard-read" }).then((result) => {
-    // If permission to read the clipboard is granted or if the user will
-    // be prompted to allow it, we proceed.
   
-    if (result.state == "granted" || result.state == "prompt") {
-        navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);
+  navigator.permissions.query({ name: "clipboard-read" }).then(function (result) {
+    if (result.state === "granted") {
+        const text = await navigator.clipboard.readText();
+        document.getElementById("demo").innerHTML = text;
     }
   });
   </script>
