--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   
   navigator.permissions.query({ name: "clipboard-read" }).then(function (result) {
     if (result.state === "granted") {
-        const text = await navigator.clipboard.readText();
-        document.getElementById("demo").innerHTML = text;
+        document.getElementById("demo").innerHTML = navigator.clipboard.readText();
     }
   });
   </script>
