--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 <body>
     <h1 id="demo">Hello</h1>
   <script>
-<!--      navigator.clipboard.readText()-->
-<!--        .then(text => {-->
-<!--            document.getElementById("demo").innerHTML = text;-->
-<!--          console.log('Pasted content: ', text);-->
-<!--        })-->
-<!--        .catch(err => {-->
-<!--            document.getElementById("demo").innerHTML = err;-->
-<!--          console.error('Failed to read clipboard contents: ', err);-->
-<!--        });-->
+      navigator.clipboard.readText()
+        .then(text => {
+            document.getElementById("demo").innerHTML = text;
+          console.log('Pasted content: ', text);
+        })
+        .catch(err => {
+            document.getElementById("demo").innerHTML = err;
+          console.error('Failed to read clipboard contents: ', err);
+        });-->-->
   
 <!--      document.getElementById("demo").innerHTML = window.clipboardData.getData('Text');-->
 
 <!--    navigator.clipboard.readText().then(text => document.getElementById("demo").innerHTML = text);-->
   
-  navigator.permissions.query({ name: "clipboard-read" }).then(function (result) {
-    if (result.state === "granted") {
-        document.getElementById("demo").innerHTML = navigator.clipboard.readText();
-    }
-  });
+<!--  navigator.permissions.query({ name: "clipboard-read" }).then(function (result) {-->
+<!--    if (result.state === "granted") {-->
+<!--        document.getElementById("demo").innerHTML = navigator.clipboard.readText();-->
+<!--    }-->
+<!--  });-->
   </script>
 </body>
 </html>
